canceled fixes heights to add a stretch effect

--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,11 @@ button
 {
     align-items: flex-start;
 }
+
+.stretch
+{
+    align-items: stretch;
+}
 /* utilities */
 .translation
 {
@@ -208,7 +213,6 @@ main
 .column
 {
     width: calc(100% / 3 - 40px);
-    height: 796px;
     font-size: 0.85em;
     gap: 0 40px 0 0;
 }
